# Soft-keyboard

./: README.md  Soft-keyboard.pro  XYInputMethod.pro  ico.rc  main.cpp  xydragablewidget.cpp  xydragablewidget.h  xyhdragabletranslateview.cpp  xyhdragabletranslateview.h  xyinput.json  xyinputplugin.cpp  xyinputplugin.h  xykeyboardfilter.cpp  xykeyboardfilter.h  xyplatforminputcontext.cpp  xyplatforminputcontext.h  xypushbutton.cpp  xypushbutton.h  xyqstringview.cpp  xyqstringview.h  xyskin.cpp  xyskin.h  xytempwindows.cpp  xytempwindows.h  xyvdragabletranslateview.cpp  xyvdragabletranslateview.h  xyvirtualkeyboard.cpp  xyvirtualkeyboard.h
chineseInput/: xydatabaseoperation.cpp  xydatabaseoperation.h  xyinputsearchinterface.cpp  xyinputsearchinterface.h  xytranslateitem.cpp  xytranslateitem.h
chineseInput/chineseBase/: chinese.db
data/: files.qrc  symbol.txt
images/: images.qrc
libgooglepinyin/: googlepinyin.pri  xygooglepinyin.cpp  xygooglepinyin.h
libgooglepinyin/include/: CMakeLists.txt  dictdef.h  dicttrie.h  spellingtrie.h  userdict.h  utf16char.h
libgooglepinyin/src/: CMakeLists.txt  dictbuilder.cpp  dicttrie.cpp  matrixsearch.cpp  ngram.cpp  spellingtable.cpp  spellingtrie.cpp  userdict.cpp
skin/: sylixos_blue.skin  sylixos_dark.skin  yellow.skin
